Fix alignment of copy code button

--- a/_sass/pro/_syntax-dark.scss
+++ b/_sass/pro/_syntax-dark.scss
@@ -4,6 +4,7 @@
     // background: #282c34;
     color: #abb2bf;
     position: relative;
+    margin-right: 0;
   }
   // .highlight pre {
   //   background: #282c34;
